final fix for outline image on mobile

--- a/src/css/themes/_themes.custom.scss
+++ b/src/css/themes/_themes.custom.scss
@@ -111,6 +111,7 @@
       top: 38px;
       left: 53px;
     }
+    margin-right: 0;
     margin-bottom: 30px;
   }
   .outline-image img {
